      Broder.  (Closes: #650701)
    + [NT] Added support for the virtual "GROUP" type in Lab Queries.
      This will make Lintian select all packages related to a given
      source (and version).
    + [NT] Removed check loading code.  This has been moved into
      Lintian::Profile.
    + [NT] Always load a profile.
    + [NT] Allow TMPDIR in the configuration file.
  * frontend/lintian-info:
    + [NT] Support new lintian.log format.
    + [NT] Support new override file format with -a.
    + [NT] Fixed the --profile argument, which now accepts the
      mandatory parameter it is supposed to.

  * lib/Checker.pm:
    + [NT] Removed, merged into frontend/lintian.
  * lib/Lintian/Architecture.pm:
    + [NT] New file.
  * lib/Lintian/Check.pm:
    + [NT] Do not check for missing uploader address as it cannot be
      done reliably anymore.
    + [NT] Applied patch from intrigeri to remove the "not-full-name"
      tags.
    + [NT] Only emit a spelling tag once for each spelling error in each
      field/file/text.
  * lib/Lintian/CheckScript.pm:
    + [NT] New file.
  * lib/Lintian/Collect/{Binary,Source}.pm:
    + [NT] Assume packages to be non-native when it cannot be
      accurately determined due to missing version field.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Fixed an error in parsing symbol names when using readelf
      as replacement for objdump.
  * lib/Lintian/Collect/Group.pm:
    + [NT] Made direct_dependencies properly handle udebs.  This fixes
      an error that would cause lintian to skip some checks for udebs.
  * lib/Lintian/Collect/Package.pm:
    + [NT] Map an owner/group of "0/0" to "root/root".  This avoids a
      number of false-positive ownership tags if only numerical
      ownership is available in the tarball.  Thanks to Thorsten
      Glaser for the report.  (Closes: #638278)
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed assumption that source packages always have a
      format field.
  * lib/Lintian/Lab.pm: