@@ -10,7 +10,6 @@ P: lintian-display-level source: debian-control-has-unusual-field-spacing line 1
 P: lintian-display-level source: direct-changes-in-diff-but-no-patch-system Changes
 P: lintian-display-level: example-unusual-interpreter usr/share/doc/lintian-display-level/examples/example #!/usr/bin/foo
 P: lintian-display-level: no-homepage-field
-P: lintian-display-level: no-upstream-changelog
 W: lintian-display-level source: dfsg-version-misspelled 1.0+dsfg-1.1
 W: lintian-display-level source: maintainer-upload-has-incorrect-version-number 1.0+dsfg-1.1
 W: lintian-display-level: binary-without-manpage usr/bin/script
